--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <groupId>DevOpsApp</groupId>
   <artifactId>DevOpsApp</artifactId>
   <version>1.0.0</version>
-  <packaging>war</packaging>
+  <packaging>war</packagingfff
 <dependencies>
 <!-- https://mvnrepository.com/artifact/log4j/log4j -->
 <dependency>
